<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name: </string>
    <string name="size">Size: </string>
    <string name="mobile_number">Mobile Number: </string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_group_size">Enter your group size</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
</resources>